--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-ht
+
+<html>
+<head>
+    <title>Simple Form</title>
+</head>
+<body>
+    <h2>Contact Form</h2>
+    <form>
+        Name: <input type="text" name="name"><br><br>
+        Email: <input type="email" name="email"><br><br>
+        <input type="submit" value="Submit">
+    </form>
+</body>
+</html>
+
