--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         Email: <input type="email" name="email"><br><br>
         <input type="submit" value="Submit">
     </form>
+    <img src=devvisuali.png>
 </body>
 </html>
 
